--- a/tutorials/usage_of_templatetagger.ipynb
+++ b/tutorials/usage_of_templatetagger.ipynb
@@ -152,6 +152,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('아이오아이', 'Noun'), ('이뻐', 'Adjective'), ('요', 'Eomi')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter.pos('아이오아이 이뻐요')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "트위터 분석기의 조사사전을 이용할 수도 있습니다. Twitter()를 만들 때 argument를 넣을 수 있습니다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "513"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter1 = Twitter(load_default_dictionary=True)\n",
+    "len(twitter1._dictionary._pos2words['Josa'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -160,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +225,7 @@
        " 'Noun': {'tt', '것', '번것', '아이', '아이오아이', '트와이스', '행사'}}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -201,13 +253,13 @@
      "data": {
       "text/plain": [
        "[('트와이스', 'Noun'),\n",
-       " ('tt', 'Alpha'),\n",
-       " ('는', 'Verb'),\n",
+       " ('tt', 'Noun'),\n",
+       " ('는', 'Josa'),\n",
        " ('좋', 'Adjective'),\n",
        " ('아요', 'Eomi')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,16 +276,12 @@
     "\n",
     "    twitter._customized_tagger.templates\n",
     "    \n",
-    "현재는 다음의 탬플릿이 입력되어 있습니다. \n",
-    "\n",
-    "    [('Noun', 'Josa'),\n",
-    "     ('Modifier', 'Noun'),\n",
-    "     ('Modifier', 'Noun', 'Josa')]"
+    "현재는 다음의 탬플릿이 입력되어 있습니다. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -241,10 +289,18 @@
     {
      "data": {
       "text/plain": [
-       "[('Noun', 'Josa'), ('Modifier', 'Noun'), ('Modifier', 'Noun', 'Josa')]"
+       "[('Noun',),\n",
+       " ('Noun', 'Noun'),\n",
+       " ('Noun', 'Josa'),\n",
+       " ('Noun', 'Josa', 'Noun'),\n",
+       " ('Noun', 'Noun', 'Josa'),\n",
+       " ('Modifier', 'Noun'),\n",
+       " ('Modifier', 'Noun', 'Noun'),\n",
+       " ('Modifier', 'Noun', 'Josa'),\n",
+       " ('Modifier', 'Noun', 'Noun', 'Josa')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -271,9 +327,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Noun\r\n",
+      "Noun Noun\r\n",
       "Noun Josa\r\n",
+      "Noun Josa Noun\r\n",
+      "Noun Noun Josa\r\n",
       "Modifier Noun\r\n",
-      "Modifier Noun Josa"
+      "Modifier Noun Noun\r\n",
+      "Modifier Noun Josa\r\n",
+      "Modifier Noun Noun Josa"
      ]
     }
    ],
@@ -290,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -298,19 +360,25 @@
     {
      "data": {
       "text/plain": [
-       "[('Noun', 'Josa'),\n",
+       "[('Noun',),\n",
+       " ('Noun', 'Noun'),\n",
+       " ('Noun', 'Josa'),\n",
+       " ('Noun', 'Josa', 'Noun'),\n",
+       " ('Noun', 'Noun', 'Josa'),\n",
        " ('Modifier', 'Noun'),\n",
+       " ('Modifier', 'Noun', 'Noun'),\n",
        " ('Modifier', 'Noun', 'Josa'),\n",
-       " ('Noun', 'Noun', 'Josa')]"
+       " ('Modifier', 'Noun', 'Noun', 'Josa'),\n",
+       " ('Noun', 'Noun', 'Noun', 'Josa')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "twitter._customized_tagger.add_a_template(('Noun', 'Noun', 'Josa'))\n",
+    "twitter._customized_tagger.add_a_template(('Noun', 'Noun', 'Noun', 'Josa'))\n",
     "twitter._customized_tagger.templates"
    ]
   },
@@ -323,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -338,7 +406,7 @@
        " ('아요', 'Eomi')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -393,7 +461,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-849546ef1046>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtwitter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_dictionary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'lovit'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Name'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-13-849546ef1046>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtwitter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_dictionary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'lovit'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Name'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m/mnt/lovit/git/customized_konlpy/ckonlpy/tag/_twitter.py\u001b[0m in \u001b[0;36madd_dictionary\u001b[1;34m(self, words, tag, force)\u001b[0m\n\u001b[0;32m     53\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0madd_dictionary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwords\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtag\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mforce\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mnot\u001b[0m \u001b[0mforce\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mnot\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtag\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtagset\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 55\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'%s is not available tag'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mtag\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     56\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_dictionary\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_dictionary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtag\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mValueError\u001b[0m: Name is not available tag"
      ]
@@ -412,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -426,7 +494,7 @@
        " 'Noun': {'tt', '것', '번것', '아이', '아이오아이', '트와이스', '행사'}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -454,7 +522,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Noun', 'Josa'), ('Modifier', 'Noun'), ('Modifier', 'Noun', 'Josa'), ('Noun', 'Noun', 'Josa'), ('Name', 'Josa')]\n"
+      "[('Noun',), ('Noun', 'Noun'), ('Noun', 'Josa'), ('Noun', 'Josa', 'Noun'), ('Noun', 'Noun', 'Josa'), ('Modifier', 'Noun'), ('Modifier', 'Noun', 'Noun'), ('Modifier', 'Noun', 'Josa'), ('Modifier', 'Noun', 'Noun', 'Josa'), ('Noun', 'Noun', 'Noun', 'Josa'), ('Name', 'Josa')]\n"
      ]
     },
     {
@@ -463,7 +531,7 @@
        "[('lovit', 'Name'), ('은', 'Josa'), ('졸려', 'Verb')]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
