--- a/tutorials/usage_of_templatetagger.ipynb
+++ b/tutorials/usage_of_templatetagger.ipynb
@@ -28,6 +28,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.4.4'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import konlpy\n",
+    "konlpy.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": false
@@ -39,7 +62,7 @@
      "text": [
       "[('우리', 'Noun'), ('아이오', 'Noun'), ('아이', 'Noun'), ('는', 'Josa'), ('정말', 'Noun'), ('이뻐', 'Adjective'), ('요', 'Eomi')] \n",
       "\n",
-      "[('트와이스', 'Noun'), ('tt', 'Alpha'), ('는', 'Verb'), ('좋', 'Adjective'), ('아요', 'Eomi')]\n"
+      "[('트', 'Noun'), ('둥이', 'Noun'), ('꺼', 'Suffix'), ('tt', 'Alpha'), ('도', 'Noun'), ('좋', 'Adjective'), ('아요', 'Eomi')]\n"
      ]
     }
    ],
@@ -48,7 +71,7 @@
     "\n",
     "twitter_original = OriginalTwitter()\n",
     "print(twitter_original.pos('우리아이오아이는 정말 이뻐요'),'\\n')\n",
-    "print(twitter_original.pos('트와이스tt는 좋아요'))"
+    "print(twitter_original.pos('트둥이꺼 tt도 좋아요'))"
    ]
   },
   {
@@ -177,7 +200,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "트위터 분석기의 조사사전을 이용할 수도 있습니다. Twitter()를 만들 때 argument를 넣을 수 있습니다. "
+    "사전을 추가할 때, 하나의 품사에 대하여 동시에 여러 개의 단어셋을 입력할 수도 있습니다.\n",
+    "\n",
+    "Twitter.add_dictionary(words, tag)는 한번에 list of str 형식의 여러 개의 단어들을 입력할 수도 있습니다. "
    ]
   },
   {
@@ -190,7 +215,9 @@
     {
      "data": {
       "text/plain": [
-       "513"
+       "{'Josa': {'는', '은'},\n",
+       " 'Modifier': {'우리', '이', '이번'},\n",
+       " 'Noun': {'tt', '것', '꺼', '번것', '아이', '아이오아이', '우리', '트둥이', '트와이스', '행사'}}"
       ]
      },
      "execution_count": 6,
@@ -199,52 +226,13 @@
     }
    ],
    "source": [
-    "twitter1 = Twitter(load_default_dictionary=True)\n",
-    "len(twitter1._dictionary._pos2words['Josa'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Twitter.add_dictionary(words, tag)는 한번에 list of str 형식의 여러 개의 단어들을 입력할 수도 있습니다. "
+    "twitter.add_dictionary(['트와이스', 'tt', '트둥이', '꺼', '우리'], 'Noun')\n",
+    "twitter._dictionary._pos2words"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Josa': {'는', '은'},\n",
-       " 'Modifier': {'우리', '이', '이번'},\n",
-       " 'Noun': {'tt', '것', '번것', '아이', '아이오아이', '트와이스', '행사'}}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "twitter.add_dictionary(['트와이스', 'tt'], 'Noun')\n",
-    "twitter._dictionary._pos2words"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "하지만 아직 트와이스tt는 이라는 문장이 제대로 인식되지 않습니다. 그 이유는 templates에 'Noun + Noun + Josa'가 없었기 때문입니다. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -259,13 +247,79 @@
        " ('아요', 'Eomi')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "twitter.pos('트와이스tt는 좋아요')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "트위터 분석기의 조사사전을 이용할 수도 있습니다. Twitter()를 만들 때 argument를 넣을 수 있습니다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "513"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter1 = Twitter(load_default_dictionary=True)\n",
+    "len(twitter1._dictionary._pos2words['Josa'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "하지만 아직 '우리트둥이꺼tt는' 이라는 어절이 제대로 인식되지 않습니다. 그 이유는 templates에 'Noun + Noun + Josa'가 없었기 때문입니다. 이 경우에는 KoNLPy에 해당 어절을 분석하라고 보냅니다. 하지만 '트둥이'라는 단어를 알지 못해서 제대로 인식되지 않습니다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('우', 'Adverb'),\n",
+       " ('리트', 'Noun'),\n",
+       " ('둥이', 'Noun'),\n",
+       " ('꺼', 'Suffix'),\n",
+       " ('tt', 'Alpha'),\n",
+       " ('는', 'Verb'),\n",
+       " ('좋', 'Adjective'),\n",
+       " ('아요', 'Eomi')]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter.pos('우리트둥이꺼tt는 좋아요')"
    ]
   },
   {
@@ -281,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -300,7 +354,7 @@
        " ('Modifier', 'Noun', 'Noun', 'Josa')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -352,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -369,16 +423,16 @@
        " ('Modifier', 'Noun', 'Noun'),\n",
        " ('Modifier', 'Noun', 'Josa'),\n",
        " ('Modifier', 'Noun', 'Noun', 'Josa'),\n",
-       " ('Noun', 'Noun', 'Noun', 'Josa')]"
+       " ('Modifier', 'Noun', 'Noun', 'Noun', 'Josa')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "twitter._customized_tagger.add_a_template(('Noun', 'Noun', 'Noun', 'Josa'))\n",
+    "twitter._customized_tagger.add_a_template(('Modifier', 'Noun', 'Noun', 'Noun', 'Josa'))\n",
     "twitter._customized_tagger.templates"
    ]
   },
@@ -391,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -399,20 +453,22 @@
     {
      "data": {
       "text/plain": [
-       "[('트와이스', 'Noun'),\n",
+       "[('우리', 'Modifier'),\n",
+       " ('트둥이', 'Noun'),\n",
+       " ('꺼', 'Noun'),\n",
        " ('tt', 'Noun'),\n",
        " ('는', 'Josa'),\n",
        " ('좋', 'Adjective'),\n",
        " ('아요', 'Eomi')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "twitter.pos('트와이스tt는 좋아요')"
+    "twitter.pos('우리트둥이꺼tt는 좋아요')"
    ]
   },
   {
@@ -449,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -461,7 +517,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-849546ef1046>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtwitter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_dictionary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'lovit'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Name'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-14-849546ef1046>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtwitter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_dictionary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'lovit'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Name'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m/mnt/lovit/git/customized_konlpy/ckonlpy/tag/_twitter.py\u001b[0m in \u001b[0;36madd_dictionary\u001b[1;34m(self, words, tag, force)\u001b[0m\n\u001b[0;32m     53\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0madd_dictionary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwords\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtag\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mforce\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mnot\u001b[0m \u001b[0mforce\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mnot\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtag\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtagset\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 55\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'%s is not available tag'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mtag\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     56\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_dictionary\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_dictionary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtag\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mValueError\u001b[0m: Name is not available tag"
      ]
@@ -480,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -491,10 +547,10 @@
        "{'Josa': {'는', '은'},\n",
        " 'Modifier': {'우리', '이', '이번'},\n",
        " 'Name': {'lovit'},\n",
-       " 'Noun': {'tt', '것', '번것', '아이', '아이오아이', '트와이스', '행사'}}"
+       " 'Noun': {'tt', '것', '꺼', '번것', '아이', '아이오아이', '우리', '트둥이', '트와이스', '행사'}}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -522,16 +578,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Noun',), ('Noun', 'Noun'), ('Noun', 'Josa'), ('Noun', 'Josa', 'Noun'), ('Noun', 'Noun', 'Josa'), ('Modifier', 'Noun'), ('Modifier', 'Noun', 'Noun'), ('Modifier', 'Noun', 'Josa'), ('Modifier', 'Noun', 'Noun', 'Josa'), ('Noun', 'Noun', 'Noun', 'Josa'), ('Name', 'Josa')]\n"
+      "[('Noun',), ('Noun', 'Noun'), ('Noun', 'Josa'), ('Noun', 'Josa', 'Noun'), ('Noun', 'Noun', 'Josa'), ('Modifier', 'Noun'), ('Modifier', 'Noun', 'Noun'), ('Modifier', 'Noun', 'Josa'), ('Modifier', 'Noun', 'Noun', 'Josa'), ('Modifier', 'Noun', 'Noun', 'Noun', 'Josa'), ('Name', 'Josa')]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[('lovit', 'Name'), ('은', 'Josa'), ('졸려', 'Verb')]"
+       "[('lovit', 'Name'),\n",
+       " ('은', 'Josa'),\n",
+       " ('이름', 'Noun'),\n",
+       " ('입니', 'Adjective'),\n",
+       " ('다', 'Eomi'),\n",
+       " ('.', 'Punctuation')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +600,52 @@
    "source": [
     "twitter._customized_tagger.add_a_template(('Name', 'Josa'))\n",
     "print(twitter._customized_tagger.templates)\n",
-    "twitter.pos('lovit은 졸려')"
+    "twitter.pos('lovit은 이름입니다.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Templates를 이용하여도 후보가 여러 개 나올 수 있습니다. 여러 개 후보 중에서 best 를 선택하는 함수를 직접 디자인 할 수 도 있습니다. 이처럼 몇 개의 점수 기준을 만들고, 각 기준의 weight를 부여하는 방식은 트위터 분석기에서 이용하는 방식인데, 직관적이고 튜닝 가능해서 매우 좋은 방식이라 생각합니다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('이', 'Noun'), ('것', 'Noun'), ('은', 'Josa'), ('테', 'Noun'), ('스트', 'Noun')]\n",
+      "[('이것', 'Noun'), ('은', 'Josa'), ('테', 'Noun'), ('스트', 'Noun')]\n",
+      "[('이것', 'Noun'), ('은', 'Josa'), ('테스트', 'Noun')]\n",
+      "best: [('이것', 'Noun'), ('은', 'Josa'), ('테스트', 'Noun')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "score_weights = {\n",
+    "    'num_nouns': -0.1,\n",
+    "    'num_words': -0.2,\n",
+    "    'no_noun': -1\n",
+    "}\n",
+    "\n",
+    "def my_score(candidate):\n",
+    "    num_nouns = len([w for w,t in candidate if t == 'Noun'])\n",
+    "    num_words = len(candidate)\n",
+    "    no_noun = 1 if num_nouns == 0 else 0\n",
+    "    \n",
+    "    score = (num_nouns * score_weights['num_nouns'] \n",
+    "             + num_words * score_weights['num_words']\n",
+    "             + no_noun * score_weights['no_noun'])\n",
+    "    return score\n",
+    "\n",
+    "twitter.set_selector(score_weights, my_score)"
    ]
   },
   {
