--- a/tutorials/usage_of_templatetagger.ipynb
+++ b/tutorials/usage_of_templatetagger.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## KoNLPy.Twitter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "KoNLPy의 [트위터 한국어 분석기][twitterlink] ([현 오픈 한국어 분석기][openlink])는 속도도 빠르고 다양한 사전도 확보하고 있는 한국어 분석기입니다. 하지만 컴파일이 되어 있는 형태로 KoNLPy에 들어가 있기 때문에 사용자 사전의 추가가 힘들고\\*, 내가 원하는 임의의 태그를 지정할 수 없습니다. \n",
     "\n",
     "customized_KoNLPy는 확실히 알고 있는 단어들에 대해서는 라이브러리를 거치지 않고 주어진 어절을 아는 단어들로 토크나이징 / 품사판별을 하는 기능을 제공합니다. 이를 위해 template 기반 토크나이징을 수행합니다. \n",
@@ -84,6 +91,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## ckonlpy.Twitter\n",
+    "\n",
+    "### Add word to custom-dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "git clone을 한 상태에서 tutorial code를 이용하신다면 아래의 코드를 실행하여 path를 추가하십시요"
    ]
   },
@@ -108,9 +124,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Josa': {'는', '은'},\n",
-      " 'Modifier': {'우리', '이', '이번'},\n",
-      " 'Noun': {'것', '아이오아이', '행사', '번것', '아이'}}\n"
+      "{'Josa': {'은', '는'},\n",
+      " 'Modifier': {'이', '이번', '우리'},\n",
+      " 'Noun': {'번것', '행사', '아이오아이', '것', '아이'}}\n"
      ]
     }
    ],
@@ -207,9 +223,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Josa': {'는', '은'},\n",
-      " 'Modifier': {'우리', '이', '이번'},\n",
-      " 'Noun': {'것', '트와이스', '아이오아이', '트둥이', '우리', '행사', '번것', '꺼', '아이', 'tt'}}\n"
+      "{'Josa': {'은', '는'},\n",
+      " 'Modifier': {'이', '이번', '우리'},\n",
+      " 'Noun': {'꺼', '트와이스', '번것', '행사', '트둥이', '아이오아이', 'tt', '것', '아이', '우리'}}\n"
      ]
     }
    ],
@@ -240,6 +256,13 @@
    ],
    "source": [
     "twitter.pos('트와이스tt는 좋아요')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use KoNLPy.Twitter dictionary"
    ]
   },
   {
@@ -308,6 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Template\n",
     "현재는 customized_tagger로 탬플릿 기반 토크나이저를 이용하고 있습니다. 어떤 탬플릿이 들어있는지 확인하기 위해서는 아래 부분을 확인하면 됩니다. \n",
     "\n",
     "    twitter._customized_tagger.templates\n",
@@ -449,6 +473,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Out of tags\n",
+    "\n",
     "사전을 추가할 때, 트위터 한국어 분석기에 존재하지 않는 태그가 들어가는 것을 방지하기 위해 tag의 값을 확인하는 부분이 구현되어 있습니다. \n",
     "\n",
     "    twitter.tagset\n",
@@ -579,6 +605,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Scoring\n",
+    "\n",
     "Templates를 이용하여도 후보가 여러 개 나올 수 있습니다. 여러 개 후보 중에서 best 를 선택하는 함수를 직접 디자인 할 수 도 있습니다. 이처럼 몇 개의 점수 기준을 만들고, 각 기준의 weight를 부여하는 방식은 트위터 분석기에서 이용하는 방식인데, 직관적이고 튜닝 가능해서 매우 좋은 방식이라 생각합니다. "
    ]
   },
@@ -617,6 +645,163 @@
     "\n",
     "twitter.set_selector(score_weights, my_score)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Postprocessing\n",
+    "\n",
+    "passwords, stopwords, 특정 품사, 혹은 미리 정의된 사전을 이용하여 단어를 변환하여 출력합니다. \n",
+    "\n",
+    "passwords 는 단어, (단어, 품사)를 입력하면 해당 단어 외에는 출력하지 않습니다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before : [('우리', 'Modifier'), ('아이오아이', 'Noun'), ('는', 'Josa'), ('정말', 'Noun'), ('이뻐', 'Adjective'), ('요', 'Eomi')]\n",
+      "\n",
+      "after  : [('아이오아이', 'Noun'), ('정말', 'Noun')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ckonlpy.tag import Postprocessor\n",
+    "\n",
+    "passwords = {'아이오아이', ('정말', 'Noun')}\n",
+    "postprocessor = Postprocessor(\n",
+    "    base_tagger = twitter,\n",
+    "    passwords = passwords\n",
+    ")\n",
+    "\n",
+    "sent = '우리아이오아이는 정말 이뻐요'\n",
+    "print('before : %s\\n' % twitter.pos(sent))\n",
+    "print('after  : %s' % postprocessor.tag(sent))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "stopwords 에 등록된 단어, (단어, 품사)는 tag 결과에서 제외됩니다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before : [('우리', 'Modifier'), ('아이오아이', 'Noun'), ('는', 'Josa'), ('정말', 'Noun'), ('이뻐', 'Adjective'), ('요', 'Eomi')]\n",
+      "\n",
+      "after  : [('우리', 'Modifier'), ('아이오아이', 'Noun'), ('정말', 'Noun'), ('이뻐', 'Adjective'), ('요', 'Eomi')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stopwords = {'는'}\n",
+    "\n",
+    "postprocessor = Postprocessor(\n",
+    "    base_tagger = twitter,\n",
+    "    stopwords = stopwords\n",
+    ")\n",
+    "\n",
+    "sent = '우리아이오아이는 정말 이뻐요'\n",
+    "print('before : %s\\n' % twitter.pos(sent))\n",
+    "print('after  : %s' % postprocessor.tag(sent))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "특정 품사를 지정하면 해당 품사만 tag 에서 출력됩니다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before : [('우리', 'Modifier'), ('아이오아이', 'Noun'), ('는', 'Josa'), ('정말', 'Noun'), ('이뻐', 'Adjective'), ('요', 'Eomi')]\n",
+      "\n",
+      "after  : [('아이오아이', 'Noun'), ('정말', 'Noun')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "passtags = {'Noun'}\n",
+    "\n",
+    "postprocessor = Postprocessor(\n",
+    "    base_tagger = twitter,\n",
+    "    passtags = passtags\n",
+    ")\n",
+    "\n",
+    "sent = '우리아이오아이는 정말 이뻐요'\n",
+    "print('before : %s\\n' % twitter.pos(sent))\n",
+    "print('after  : %s' % postprocessor.tag(sent))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "치환할 단어, (단어, 품사)를 dict 형식으로 정의하면 tag 에서 단어가 치환되어 출력됩니다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before : [('우리', 'Modifier'), ('아이오아이', 'Noun'), ('는', 'Josa'), ('정말', 'Noun'), ('이뻐', 'Adjective'), ('요', 'Eomi')]\n",
+      "\n",
+      "after  : [('우리', 'Modifier'), ('아이돌', 'Noun'), ('는', 'Josa'), ('정말', 'Noun'), ('예쁘다', 'Adjective'), ('요', 'Eomi')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "replace = {\n",
+    "    '아이오아이': '아이돌',\n",
+    "    ('이뻐', 'Adjective'): '예쁘다'\n",
+    "}\n",
+    "\n",
+    "postprocessor = Postprocessor(\n",
+    "    base_tagger = twitter,\n",
+    "    replace = replace\n",
+    ")\n",
+    "\n",
+    "sent = '우리아이오아이는 정말 이뻐요'\n",
+    "print('before : %s\\n' % twitter.pos(sent))\n",
+    "print('after  : %s' % postprocessor.tag(sent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
