--- a/tutorials/usage_of_templatetagger.ipynb
+++ b/tutorials/usage_of_templatetagger.ipynb
@@ -126,7 +126,7 @@
      "text": [
       "{'Josa': {'은', '는'},\n",
       " 'Modifier': {'이', '이번', '우리'},\n",
-      " 'Noun': {'번것', '행사', '아이오아이', '것', '아이'}}\n"
+      " 'Noun': {'아이', '행사', '아이오아이', '것', '번것'}}\n"
      ]
     }
    ],
@@ -225,7 +225,7 @@
      "text": [
       "{'Josa': {'은', '는'},\n",
       " 'Modifier': {'이', '이번', '우리'},\n",
-      " 'Noun': {'꺼', '트와이스', '번것', '행사', '트둥이', '아이오아이', 'tt', '것', '아이', '우리'}}\n"
+      " 'Noun': {'아이', 'tt', '행사', '아이오아이', '트둥이', '꺼', '트와이스', '것', '번것', '우리'}}\n"
      ]
     }
    ],
@@ -795,6 +795,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading wordset\n",
+    "\n",
+    "utils 에는 stopwords, passwords, replace word pair 를 파일로 저장하였을 경우, 이를 손쉽게 불러오는 함수가 있습니다.\n",
+    "\n",
+    "load_wordset 은 set of str 혹은 set of tuple 을 return 합니다. 예시의 passwords.txt 의 내용은 아래와 같습니다. 단어의 품사는 한 칸 띄어쓰기로 구분합니다.\n",
+    "\n",
+    "    아이오아이\n",
+    "    아이오아이 Noun\n",
+    "    공연"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{('아이오아이', 'Noun'), '아이오아이', '공연'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ckonlpy.utils import load_wordset\n",
+    "from ckonlpy.utils import load_replace_wordpair\n",
+    "\n",
+    "passwords = load_wordset('./passwords.txt')\n",
+    "print(passwords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "stopwords.txt 의 포멧은 passwords.txt 와 같습니다. 단어의 품사가 있을 경우 한 칸 띄어쓰기로 구분합니다.\n",
+    "\n",
+    "    은\n",
+    "    는\n",
+    "    이 Josa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'은', '는', ('이', 'Josa')}\n"
+     ]
+    }
+   ],
+   "source": [
+    "stopwords = load_wordset('./stopwords.txt')\n",
+    "print(stopwords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "치환할 단어쌍은 tap 구분이 되어있습니다. 치환될 단어에 품사 태그가 있을 경우 한 칸 띄어쓰기로 구분합니다.\n",
+    "\n",
+    "    str\\tstr\n",
+    "    str str\\tstr\n",
+    "\n",
+    "아래는 replacewords.txt 의 예시입니다.\n",
+    "\n",
+    "    아빠\t아버지\n",
+    "    엄마 Noun\t어머니"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'아빠': '아버지', ('엄마', 'Noun'): '어머니'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "replace = load_replace_wordpair('./replacewords.txt')\n",
+    "print(replace)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -820,7 +918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
