--- a/tutorials/usage_of_templatetagger.ipynb
+++ b/tutorials/usage_of_templatetagger.ipynb
@@ -112,7 +112,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../')"
+    "sys.path.insert(0, '../')"
    ]
   },
   {
@@ -124,9 +124,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Josa': {'은', '는'},\n",
-      " 'Modifier': {'이', '이번', '우리'},\n",
-      " 'Noun': {'아이', '행사', '아이오아이', '것', '번것'}}\n"
+      "{'Josa': {'는', '은'},\n",
+      " 'Modifier': {'이번', '우리', '이'},\n",
+      " 'Noun': {'아이', '번것', '행사', '아이오아이', '것'}}\n"
      ]
     }
    ],
@@ -223,9 +223,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Josa': {'은', '는'},\n",
-      " 'Modifier': {'이', '이번', '우리'},\n",
-      " 'Noun': {'아이', 'tt', '행사', '아이오아이', '트둥이', '꺼', '트와이스', '것', '번것', '우리'}}\n"
+      "{'Josa': {'는', '은'},\n",
+      " 'Modifier': {'이번', '우리', '이'},\n",
+      " 'Noun': {'아이', '번것', '꺼', '트둥이', 'tt', '행사', '아이오아이', '것', '우리', '트와이스'}}\n"
      ]
     }
    ],
@@ -650,6 +650,108 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Stem, Norm\n",
+    "\n",
+    "pos 함수에서 norm, stem 옵션을 사용할 수 있습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('이', 'Determiner'),\n",
+       " ('것', 'Noun'),\n",
+       " ('은', 'Josa'),\n",
+       " ('테스트', 'Noun'),\n",
+       " ('이다', 'Adjective')]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter.pos('이것은테스트입니다', norm=True, stem=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('이', 'Determiner'),\n",
+       " ('것', 'Noun'),\n",
+       " ('은', 'Josa'),\n",
+       " ('테스트', 'Noun'),\n",
+       " ('입니', 'Adjective'),\n",
+       " ('다', 'Eomi')]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter.pos('이것은테스트입니다', norm=True, stem=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('이', 'Determiner'),\n",
+       " ('것', 'Noun'),\n",
+       " ('은', 'Josa'),\n",
+       " ('테스트', 'Noun'),\n",
+       " ('이다', 'Adjective')]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter.pos('이것은테스트입니다', norm=False, stem=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['이', '것', '은', '테스트', '입니', '다']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter.morphs('이것은테스트입니다', norm=True, stem=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Postprocessing\n",
     "\n",
     "passwords, stopwords, 특정 품사, 혹은 미리 정의된 사전을 이용하여 단어를 변환하여 출력합니다. \n",
@@ -659,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -811,14 +913,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{('아이오아이', 'Noun'), '아이오아이', '공연'}\n"
+      "{('아이오아이', 'Noun'), '공연', '아이오아이'}\n"
      ]
     }
    ],
@@ -843,14 +945,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'은', '는', ('이', 'Josa')}\n"
+      "{'는', '은', ('이', 'Josa')}\n"
      ]
     }
    ],
@@ -876,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
