Add perfect_match usage

--- a/tutorials/usage_of_templatetagger-ver_0_0_6.ipynb
+++ b/tutorials/usage_of_templatetagger-ver_0_0_6.ipynb
@@ -131,8 +131,8 @@
      "output_type": "stream",
      "text": [
       "{'Josa': {'는', '은'},\n",
-      " 'Modifier': {'우리', '이', '이번'},\n",
-      " 'Noun': {'것', '번것', '아이', '행사', '아이오아이'}}\n"
+      " 'Modifier': {'이', '이번', '우리'},\n",
+      " 'Noun': {'행사', '것', '아이오아이', '아이', '번것'}}\n"
      ]
     }
    ],
@@ -236,8 +236,8 @@
      "output_type": "stream",
      "text": [
       "{'Josa': {'는', '은'},\n",
-      " 'Modifier': {'우리', '이', '이번'},\n",
-      " 'Noun': {'우리', '것', '꺼', '트와이스', '트둥이', 'tt', '아이', '아이오아이', '번것', '행사'}}\n"
+      " 'Modifier': {'이', '이번', '우리'},\n",
+      " 'Noun': {'행사', '번것', '트둥이', '것', '아이오아이', '아이', '꺼', '우리', 'tt', '트와이스'}}\n"
      ]
     }
    ],
@@ -326,7 +326,7 @@
     {
      "data": {
       "text/plain": [
-       "[('우리', 'Noun'),\n",
+       "[('우리', 'Modifier'),\n",
        " ('트둥이', 'Noun'),\n",
        " ('꺼', 'Noun'),\n",
        " ('tt', 'Noun'),\n",
@@ -497,8 +497,7 @@
     {
      "data": {
       "text/plain": [
-       "[('!', 'Punctuation'),\n",
-       " ('우리', 'Noun'),\n",
+       "[('우리', 'Noun'),\n",
        " ('트둥이', 'Noun'),\n",
        " ('tt', 'Noun'),\n",
        " ('는', 'Josa'),\n",
@@ -512,12 +511,56 @@
     }
    ],
    "source": [
-    "twitter.pos('!우리트둥이tt는 좋아요')"
+    "twitter.pos('우리트둥이tt는 좋아요')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "어절의 중간에 매칭이 되는 template 이 있어도 작동이 됩니다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('!', 'Punctuation'),\n",
+       " ('우리', 'Noun'),\n",
+       " ('트둥이', 'Noun'),\n",
+       " ('tt', 'Noun'),\n",
+       " ('는', 'Josa'),\n",
+       " ('좋', 'Adjective'),\n",
+       " ('아요', 'Eomi')]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter.pos('!우리트둥이tt는 좋아요')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "어절 전체가 template 으로 완전히 매칭될 때만 template tagger 를 이용하고 싶다면 perfect_match = True 로 설정합니다.\n",
+    "\n",
+    "(Punctuation, Noun, Noun, Noun, Josa) template 은 없기 때문에 perfect_match = True 로 설정하면, 어절을 base tagger 를 이용하여 품사 판별을 수행합니다. Baes tagger 에는 사용자 사전이 추가되어있지 않아서 제대로 작동하지 않습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -535,7 +578,7 @@
        " ('아요', 'Eomi')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -592,7 +635,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-849546ef1046>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtwitter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_dictionary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'lovit'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Name'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-17-849546ef1046>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtwitter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_dictionary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'lovit'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Name'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m/Users/hyunjoongkim/git/customized_konlpy/ckonlpy/tag/_twitter.py\u001b[0m in \u001b[0;36madd_dictionary\u001b[0;34m(self, words, tag, force)\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0madd_dictionary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwords\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtag\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mforce\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;32mnot\u001b[0m \u001b[0mforce\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;32mnot\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtag\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtagset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 67\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%s is not available tag'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mtag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdictionary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_dictionary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: Name is not available tag"
      ]
@@ -611,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -620,7 +663,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['Name', 'Noun', 'Modifier', 'Josa'])\n"
+      "dict_keys(['Name', 'Modifier', 'Josa', 'Noun'])\n"
      ]
     }
    ],
@@ -638,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -678,7 +721,7 @@
        " ('.', 'Punctuation')]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -764,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -775,35 +818,13 @@
        "[('테스트', 'Noun'), ('이다', 'Adjective')]"
       ]
      },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "twitter.pos('테스트입니다', norm=True, stem=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('테스트', 'Noun'), ('입니', 'Adjective'), ('다', 'Eomi')]"
-      ]
-     },
      "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "twitter.pos('테스트입니다', norm=True, stem=False)"
+    "twitter.pos('테스트입니다', norm=True, stem=True)"
    ]
   },
   {
@@ -816,10 +837,32 @@
     {
      "data": {
       "text/plain": [
-       "[('테스트', 'Noun'), ('이다', 'Adjective')]"
+       "[('테스트', 'Noun'), ('입니', 'Adjective'), ('다', 'Eomi')]"
       ]
      },
      "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter.pos('테스트입니다', norm=True, stem=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('테스트', 'Noun'), ('이다', 'Adjective')]"
+      ]
+     },
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -879,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -916,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -953,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -1001,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -1035,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -1044,7 +1087,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{('이', 'Josa'), '는', '은'}\n"
+      "{'는', ('이', 'Josa'), '은'}\n"
      ]
     }
    ],
@@ -1070,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
